--- a/EM算法高斯混合模型简单示例代码.ipynb
+++ b/EM算法高斯混合模型简单示例代码.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EM 算法简单示例（一维正太分布组成的高斯混合模型）byself"
+    "# EM 算法简单示例（一维正态分布组成的高斯混合模型）byself"
    ]
   },
   {
